{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 60,
  "lineage": "516b878b-8380-045f-68d2-0f87cf54ac0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b2518fbca240dae7",
            "domain": "vpc",
            "id": "eipalloc-077748c98a72b1d68",
            "network_interface": "eni-06300ea3fc9c08eb1",
            "private_dns": "ip-172-0-0-50.us-east-2.compute.internal",
            "private_ip": "172.0.0.50",
            "public_dns": "ec2-3-22-6-192.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.6.192",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc20dd1da406780b",
            "arn": "arn:aws:ec2:us-east-2:351441645959:instance/i-0a0fddcd120465f6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0fddcd120465f6a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-05471aef314cac4d9",
            "private_dns": "ip-172-16-5-41.us-east-2.compute.internal",
            "private_ip": "172.16.5.41",
            "public_dns": "ec2-3-133-161-86.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.161.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd3a1a640601352a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c26575ca74b2e05d",
            "tags": {
              "Name": "demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3eb2deef430543"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ed0a5c653a9aa8e3",
            "owner_id": "351441645959",
            "tags": {
              "Name": "m-ig"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-077748c98a72b1d68",
            "id": "nat-087c05f5e0625597b",
            "network_interface_id": "eni-06300ea3fc9c08eb1",
            "private_ip": "172.0.0.50",
            "public_ip": "3.22.6.192",
            "subnet_id": "subnet-07801971af9e84985",
            "tags": {
              "Name": "m-ng"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05a00ede1ac44f09f",
            "owner_id": "351441645959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed0a5c653a9aa8e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "m-rt-private"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ec5dcc5ddcc85ad8",
            "owner_id": "351441645959",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed0a5c653a9aa8e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "m-rt-public"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100b59cf4bd7ce72",
            "route_table_id": "rtb-05a00ede1ac44f09f",
            "subnet_id": "subnet-0969246972947f3f9"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt-private",
            "aws_subnet.private-1",
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbdf9acc516689eb",
            "route_table_id": "rtb-05a00ede1ac44f09f",
            "subnet_id": "subnet-097be0fcf185c6a36"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_subnet.private-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044d95ef3e5255707",
            "route_table_id": "rtb-0ec5dcc5ddcc85ad8",
            "subnet_id": "subnet-07801971af9e84985"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt-public",
            "aws_subnet.public-1",
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dfd29ae60c30f78",
            "route_table_id": "rtb-0ec5dcc5ddcc85ad8",
            "subnet_id": "subnet-0ad409f7531334c23"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.public-2",
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:351441645959:subnet/subnet-0969246972947f3f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.0.2.0/24",
            "id": "subnet-0969246972947f3f9",
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "tags": {
              "Name": "m-private-1"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:351441645959:subnet/subnet-097be0fcf185c6a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.0.3.0/24",
            "id": "subnet-097be0fcf185c6a36",
            "map_public_ip_on_launch": false,
            "owner_id": "351441645959",
            "tags": {
              "Name": "m-private-2"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:351441645959:subnet/subnet-07801971af9e84985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.0.0.0/24",
            "id": "subnet-07801971af9e84985",
            "map_public_ip_on_launch": true,
            "owner_id": "351441645959",
            "tags": {
              "Name": "m-public-1"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:351441645959:subnet/subnet-0ad409f7531334c23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.0.1.0/24",
            "id": "subnet-0ad409f7531334c23",
            "map_public_ip_on_launch": true,
            "owner_id": "351441645959",
            "tags": {
              "Name": "m-public-2"
            },
            "vpc_id": "vpc-0e5ca9d6c5a49ccc9"
          },
          "dependencies": [
            "aws_vpc.musketeer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "musketeer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:351441645959:vpc/vpc-0e5ca9d6c5a49ccc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/22",
            "default_network_acl_id": "acl-0dfac2c3e75017ca3",
            "default_route_table_id": "rtb-0cce753377afd34af",
            "default_security_group_id": "sg-06ea3de13268036c9",
            "dhcp_options_id": "dopt-637ca908",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5ca9d6c5a49ccc9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cce753377afd34af",
            "owner_id": "351441645959",
            "tags": {
              "Name": "musketeer"
            }
          }
        }
      ]
    }
  ]
}